# DualSense-Multiplatform

./: .clang-format-ignore  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md
Source/: .clang-format  CMakeLists.txt
Source/Private/Core/Algorithms/: MadgwickAhrs.cpp
Source/Private/Core/Interfaces/: IPlatformHardwareInfo.cpp
Source/Private/GImplementations/Libraries/DualSense/: DualSenseLibrary.cpp
Source/Private/GImplementations/Utils/: GamepadOutput.cpp
Source/Private/GImplementations/Utils/MiniAudio/: miniaudio_impl.cpp
Source/Private/Implementations/Libraries/Base/: SonyGamepadAbstract.cpp
Source/Private/Implementations/Libraries/DualSense/: DualSenseLibrary.cpp
Source/Private/Implementations/Libraries/DualShock/: DualShockLibrary.cpp
Source/Private/Implementations/Utils/: GamepadOutput.cpp
Source/Public/Core/Algorithms/: MadgwickAhrs.h
Source/Public/Core/Interfaces/: IDeviceRegistry.h  IPlatformHardwareInfo.h  ISonyGamepad.h
Source/Public/Core/Interfaces/Segregations/: IGamepadAudioHaptics.h  IGamepadLightbar.h  IGamepadRumbles.h  IGamepadSensors.h  IGamepadStatus.h  IGamepadTouch.h  IGamepadTrigger.h
Source/Public/Core/Templates/: TBasicDeviceRegistry.h  TGenericHardwareInfo.h
Source/Public/Core/Types/: ECoreGamepad.h
Source/Public/GCore/Templates/: TBasicDeviceRegistry.h
Source/Public/GImplementations/Libraries/DualShock/: DualShockLibrary.h
Source/Public/GImplementations/Utils/: GamepadAudio.h  GamepadSensors.h
Source/Public/Implementations/Libraries/Base/: SonyGamepadAbstract.h
Source/Public/Implementations/Libraries/DualSense/: DualSenseLibrary.h
Source/Public/Implementations/Libraries/DualShock/: DualShockLibrary.h
Source/Public/Implementations/Utils/: GamepadInput.h  GamepadOutput.h  GamepadSensors.h  GamepadTouch.h  GamepadTrigger.h
Source/Public/Libs/: miniaudio.h
build-test/: CMakeCache.txt  CTestTestfile.cmake  (+2 more)
(+65 files in other folders)
